--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,14 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.Loginapp" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
-    </style>
 
-    <style name="Theme.Loginapp" parent="Base.Theme.Loginapp" />
-</resources>
+        <style name="CustomTheme" parent="Theme.AppCompat.Light.NoActionBar">
+            <item name="android:textViewStyle">@style/CustomTextView</item>
+            <item name="android:windowBackground">#00FF00</item>
+        </style>
+
+        <style name="CustomTextView" parent="android:Widget.TextView">
+            <item name="android:textSize">20sp</item>
+            <item name="android:textColor">#7700FF</item>
+        </style>
+    </resources>
+
